--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <!-- https://maven.apache.org/guides/mini/guide-naming-conventions.html -->
+  <name>welovecoding | markdown-parser</name>
   <groupId>com.welovecoding.webapp</groupId>
   <artifactId>markdown-parser</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -10,5 +12,19 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-  <name>welovecoding | markdown-parser</name>
+  <dependencies>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20141113</version>
+      <type>jar</type>
+    </dependency>
+    <!-- Markdown -->
+    <dependency>
+      <groupId>org.commonjava.googlecode.markdown4j</groupId>
+      <artifactId>markdown4j</artifactId>
+      <version>2.2-cj-1.0</version>
+      <type>jar</type>
+    </dependency>
+  </dependencies>
 </project>
